--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           name="savings"
           placeholder="Savings"
           value="500"
-          readonly
+          <!-- readonly -->
           class="p-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500 bg-gray-100 text-gray-600 cursor-not-allowed"
         />
         <p id="savings-in-words" class="text-xs text-blue-600 italic mt-1"></p>
