--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Savings Manager(Altaf)</title>
+    <title>Savings Manager</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-white text-black p-6">
-    <h1 class="text-2xl font-bold mb-4">Savings Manager(skks-a)</h1>
+    <h1 class="text-2xl font-bold mb-4">Savings Manager(skks-r)</h1>
     <!-- Form -->
     <form id="savings-form" class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
       <!-- Month Input (Text) -->
@@ -118,7 +118,7 @@
         id="receiver"
         name="receiver"
         placeholder="Receiver"
-        value="altaf"
+        value="rashid"
         class="p-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
       />
       <input
