--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         id="receiver"
         name="receiver"
         placeholder="Receiver"
-        value="rashid"
+        value="altaf"
         class="p-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
       />
       <input
