--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-white text-black p-6">
-    <h1 class="text-2xl font-bold mb-4">Savings Manager(skks-r)</h1>
+    <h1 class="text-2xl font-bold mb-4">Savings Manager(skks-a)</h1>
     <!-- Form -->
     <form id="savings-form" class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
       <!-- Month Input (Text) -->
