--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         type="date"
         id="receive_date"
         name="receive_date"
+        placeholder="Date (e.g., mm/dd/yyyy)"
         class="p-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
       />
       <input
@@ -335,11 +336,6 @@
         const inWords = numberToWords(instNoValue);
         document.getElementById("instalment_no-in-words").textContent =
           instNoValue ? `${inWords}` : "";
-      });
-      instDue.addEventListener("input", () => {
-        const dueValue = parseInt(instDue.value) || 0;
-        const inWords = numberToWords(dueValue);
-        document.getElementById("instalment_due-in-words").textContent = dueValue ? `${inWords}` : "";
       });
       savings.addEventListener("input", () => {
         const savingsValue = parseInt(savings.value) || 0;
